<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".activities.DeveloperActivity">
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/icon"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="cursive"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/App_Developer"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:fontFamily="monospace"
        android:textSize="14sp"
        android:textStyle="bold"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="20dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:padding="8dp"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:src="@drawable/roma_profile"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/romany"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Android_Developer"
                    android:textAllCaps="false"
                    android:drawableLeft="@drawable/ic_user"
                    android:drawablePadding="5dp"
                    android:layout_marginTop="5dp"
                    android:textSize="14sp"
                   />
                <TextView
                    android:id="@+id/roma_gmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Email"
                    android:textAllCaps="false"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="5dp"
                    android:layout_marginTop="5dp"
                    android:textSize="14sp"
                    />
                <TextView
                    android:id="@+id/roma_Linked"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/linked_In"
                    android:textAllCaps="false"
                    android:drawableLeft="@drawable/ic_linkedin"
                    android:drawablePadding="5dp"
                    android:layout_marginTop="5dp"
                    android:textSize="14sp"
                    />
                <TextView
                    android:id="@+id/roma_face"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/facebook"
                    android:textAllCaps="false"
                    android:drawableLeft="@drawable/ic_facebook"
                    android:drawablePadding="5dp"
                    android:layout_marginTop="8dp"
                    android:textSize="14sp"
                    />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="20dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="8dp"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_marginTop="15dp"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ramy_profile"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ramy"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Asp"
                    android:textAllCaps="false"
                    android:drawableLeft="@drawable/ic_user"
                    android:drawablePadding="5dp"
                    android:layout_marginTop="5dp"
                    android:textSize="14sp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Email_ramy"
                    android:textAllCaps="false"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="5dp"
                    android:layout_marginTop="5dp"
                    android:textSize="14sp"
                    />
                <TextView
                    android:id="@+id/Linked_Ramy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Link_Ramy"
                    android:textAllCaps="false"
                    android:drawableLeft="@drawable/ic_linkedin"
                    android:drawablePadding="5dp"
                    android:layout_marginTop="5dp"
                    android:textSize="14sp"
                    />
                <TextView
                    android:id="@+id/Face_Ramy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Face_Ramy"
                    android:textAllCaps="false"
                    android:drawableLeft="@drawable/ic_facebook"
                    android:drawablePadding="5dp"
                    android:layout_marginTop="8dp"
                    android:textSize="14sp"
                    />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>